# hse_case_web

./: .gitignore  Dockerfile  pyproject.toml  requirments.txt
backend/: app.py  asgi.py  auth.py  database.py  smtp.py  verification_email.html
backend/blueprints/: api.py  authentication.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.scss  index.tsx  utils.tsx
frontend/src/pages/: AdminPanel.tsx  Login.tsx  Main.tsx  Personal.tsx  Register.tsx
frontend/src/pages/Main/: Main.module.scss  Main.tsx
