[tool.poetry]
name = "hse-case"
version = "0.1.0"
description = ""
authors = ["l4blee <l4blee@yandex.ru>"]
readme = "README.md"
packages = [{include = "hse_case"}]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "20.12.6"
bcrypt = "^4.0.1"
PyJWT = "^2.6.0"
pymongo = {extras = ["srv"], version = "^4.3.2"}
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
